Resolve "Alte Implementierung von "ILine" löschen und durch "v2/ILine" ersetzen"
Closes #1799

See merge request main/Sumatra!1642

sumatra-commit: d0bafbd1611f3944a3f35269daa6d9f69b1acefd